style: :lipstick: Updated floating message box item styles to fix overflow problems

--- a/src/components/message-pane/styles.module.scss
+++ b/src/components/message-pane/styles.module.scss
@@ -22,7 +22,8 @@
 
 .messageArea {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: stretch;
   position: sticky;
   bottom: 0;
   flex-shrink: 0;
@@ -70,18 +71,26 @@
 
   }
   
+  .floatingItems {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+  }
+  
   .floating {
-    position: absolute;
+
     background-color: rgba(40, 40, 40, 0.6);
     backdrop-filter: blur(20px);
     border: solid 1px rgba(255, 255, 255, 0.2);
-    border-radius: 12px;
+    border-radius: 6px;
     padding: 3px;
     padding-left: 8px;
     padding-right: 8px;
     font-size: 14px;
-    left: 60px;
-    margin-right: 60px;
+    margin-left: 55px;
+    margin-right: 110px;
+    // align-self: flex-start;
     z-index: 11111;
 
 
